<resources>
    <string name="app_name">ZJXXLock</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="ble_not_supported">BLE不支持</string>
    <string name="unlock">开锁</string>
    <string name="title_activity_main">Main</string>
    <string name="title_lock">我的蓝牙锁</string>
    <string name="title_apply">申请教室</string>
    <string name="title_else">其他</string>
    <string name="title_record">教室开锁</string>
    <string name="title_user">个人中心</string>
    <string name="title_door_state">门锁状态</string>
    <string name="teaching_building">教学楼：</string>
    <string name="floor">楼   层：</string>
    <string name="classroom">教室号：</string>
    <string name="dialog_default_title">Here\'s a message!</string>
    <string name="dialog_ok">OK</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="LOADING">Loading...</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login">Sign in</string>
    <string name="account">账号</string>
    <string name="pwd">密码</string>
    <string name="login">登陆</string>
    <string name="usertype">用户</string>
    <string name="register">注册</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
</resources>
