<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:float="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/loginljd">

    <RelativeLayout
        android:id="@+id/editRel"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"

            android:layout_centerVertical="true"
            android:orientation="vertical"
            android:layout_alignParentLeft="true">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="用户登录"
                android:textSize="20dp"
                android:textStyle="bold" />

                <com.wrapp.floatlabelededittext.FloatLabeledEditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    float:fletPadding="10dp">
                    <RelativeLayout
                    android:id="@+id/accountRel"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginTop="20dp"
                    android:layout_gravity="center_horizontal">


                    <EditText
                        android:id="@+id/accountEdittext"
                        android:layout_marginLeft="60dp"
                        android:layout_marginRight="60dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/account" />
                    </RelativeLayout>
                </com.wrapp.floatlabelededittext.FloatLabeledEditText>


            <com.wrapp.floatlabelededittext.FloatLabeledEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                float:fletPaddingBottom="10dp">
                <RelativeLayout
                android:id="@+id/pwdRel"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_gravity="center_horizontal"
                android:layout_below="@+id/accountRel"
                android:layout_marginTop="20dp">



                <EditText
                    android:id="@+id/pwdEdittext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="60dp"
                    android:layout_marginRight="60dp"
                    android:hint="密码"
                    android:inputType="textPassword" />
               </RelativeLayout>
            </com.wrapp.floatlabelededittext.FloatLabeledEditText>


            <RelativeLayout
                android:id="@+id/usertypeRel"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_below="@+id/accountRel"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp">


                <TextView
                    android:id="@+id/usertype"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:padding="8dp"
                    android:text="@string/usertype"
                    android:layout_marginLeft="60dp"

                    android:textColor="@color/sweet_dialog_bg_color"
                    android:textSize="17sp"
                    android:layout_alignParentLeft="true" />

                <Spinner
                    android:id="@+id/usertypeSprinner"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="120dp"
                    android:layout_marginRight="60dp"
                    />
            </RelativeLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/checkBoxLogin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="记住密码"

                    android:textColor="@color/colorBlack" />

                <Button
                    android:id="@+id/login_in"
                    android:layout_width="130dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="80dp"
                    android:background="@drawable/selector"
                    android:text="@string/login"
                    android:textColor="#ffffff" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/info"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text=""
                    android:textColor="@color/colorLucency"
                    android:textSize="40px" />
            </LinearLayout>

        </LinearLayout>

    </RelativeLayout>


</LinearLayout>