<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:context="com.example.gxt.jlwlcokapp.DoorStateFragment">

    <LinearLayout
        android:id="@+id/main_state"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="vertical"
        android:weightSum="1">

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_marginTop="10dp"
            android:background="@color/colorGreenYellow"
            />

        <LinearLayout

            android:layout_width="match_parent"
            android:weightSum="3"
            android:layout_height="40dp"
            android:orientation="horizontal"
            >

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/teaching_building"
                android:textSize="20dp"
                android:textColor="@color/colorPrimary"
                />

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/floor"
                android:textSize="20dp"
                android:textColor="@color/colorPrimary"/>

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/classroom"
                android:textSize="20dp"
                android:textColor="@color/colorPrimary"
                />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/colorGreenYellow"
            />

        <LinearLayout

            android:layout_width="match_parent"
            android:weightSum="3"
            android:layout_height="40dp"
            android:orientation="horizontal"
            >

            <Spinner
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:id="@+id/admin_teathing_building"></Spinner>

            <Spinner
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:id="@+id/admin_floor"></Spinner>

            <Spinner
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:id="@+id/admin_classroom"></Spinner>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/colorGreenYellow"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:orientation="horizontal"
            android:gravity="center">

            <Button
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:background="@drawable/selector"
                android:text="开启当前教室"
                android:id="@+id/btn_op"/>

            <Button
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:background="@drawable/selector"
                android:layout_marginLeft="20dp"
                android:text="查看该教室状态"
                android:id="@+id/btn_state"/>

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:textSize="15dp"
            android:textColor="@color/colorLucency"
            android:text="text"
            android:id="@+id/admin_op"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/colorGreenYellow"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp">

            <TextView
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:text="电池电量："
                android:gravity="center"
                android:textSize="20dp"
                android:textColor="@color/colorPrimary"
                />

            <TextView
                android:layout_width="200dp"
                android:layout_height="match_parent"/>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/colorGreenYellow"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:text="开锁记录："

                android:textSize="20dp"
                android:textColor="@color/colorPrimary"
                android:id="@+id/textView10"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/colorGreenYellow"
                />

            <LinearLayout

                android:layout_width="match_parent"
                android:weightSum="3"
                android:layout_height="30dp"
                android:orientation="horizontal"
                >

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="时间"
                    android:textSize="20dp"
                    android:textColor="@color/colorGray"
                    android:id="@+id/textView9"/>

                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:background="@color/colorGray"/>

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="身份"
                    android:textSize="20dp"
                    android:textColor="@color/colorGray"
                    android:id="@+id/textView7"/>

                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:background="@color/colorGray"/>

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="姓名"
                    android:textSize="20dp"
                    android:textColor="@color/colorGray"
                    android:id="@+id/textView6"/>


            </LinearLayout>

            <ListView
                android:id="@+id/re_list"
                android:layout_width="wrap_content"
                android:layout_height="match_parent">

            </ListView>
        </LinearLayout>

    </LinearLayout>

</FrameLayout>
